<resources>
    <string name="app_name">Code Test</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>

    <string name="weather_forecast">Weather Forecast</string>
    <string name="locations">Locations</string>
    <string name="location">Location</string>
    <string name="temp_celsius">Temperature (°C)</string>
    <string name="add_new">Add new</string>
    <string name="add_new_location">Add new location</string>
    <string name="delete_instructions">Long press on item to delete it.</string>


    <string name="error_title">Error</string>
    <string name="error_message">Something went wrong</string>
    <string name="error_field_missing_message">Required field is missing</string>
    <string name="server_error_message">Server error</string>
    <string name="fetching_data_error">An error occurred while loading data from server.</string>

    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="city_name">City name</string>
</resources>
